# narrative-reconstruction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
api/: main.py
db-init/: init.sql
init/: init-db.sql
scraper/: celery_app.py  scrape_articles.py  tasks.py
src/: 1.scrape-preprocess-article-contents.py  2.extract-events.py  3.group-events-by-date.py  4.create-narrative.py  5.insert-extracted-into-db.py  celery_worker.py  db-operations.py  extract-info.py  extract-triples.py  extract_gexf.py  extract_triples.py  extract_triplets.py  group_by_event_date.py  insert_into_db.py  knowledge_graph.gexf  run_all.py  scrape-article-contents.py  scrape_article_content.py  step2_extract_events.py  step3_clean_extracted_events.py  test_postgres.py
src/api/: main.py  tasks.json
src/bg_tasks/: celery_worker.py  tasks.py
src/data/: actors.json  article_contents.json  article_entities.json  article_triples.json  articles.csv  entities_grouped_by_event_date.json  grouped_events_by_date.json  locations.json  narrative_output_by_date.json  reconstructed_narrative.json
src/data/temp_data/: grouped_events_by_date.json
src/scripts/: extract_gexf.py  run_all.py  step4_create_narrative.py  step5_insert_narratives_into_db.py
src/tasks/: example_task.py
src/tests/: test_extract_gexf.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py
src/worker/: articles.json  scraper_worker.py
tests/: test_extract_triples.py  test_insert_into_db.py  test_scrape_article_content.py
tests/data/: article_contents.json  article_triples.json
