[project]
name = "narrative-recon"
version = "0.1.0"
description = "Narrative reconstruction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.27.0",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "psycopg>=3.2.9",
    "pytest>=8.4.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.7",
    
]

[tool.ruff]
exclude = [".venv/", "build/"]
line-length = 79

[tool.ruff.format]
quote-style = "single"
